fixed the spacing

--- a/src/app/sub-pages/not-found/not-found.component.scss
+++ b/src/app/sub-pages/not-found/not-found.component.scss
@@ -20,6 +20,7 @@
             font-weight: 700;
             line-height: 130%; /* 46.8px */
             letter-spacing: -0.36px;
+            margin-bottom: 5px;
         }
         p{
             color:#767680;
@@ -29,6 +30,7 @@
             font-weight: 400;
             line-height: 130%; /* 26px */
             letter-spacing: -0.2px;
+            margin-top: 0;
         }
     }
 
